@@ -3,6 +3,7 @@
 - [fix][minor] Remove the `Sized` restriction for the `EncodeBody` trait.
 - [impl][patch] Use `poll_write_vectored` in the TCP transport to write the header and body with a single syscall.
 - [rename][major] Rename `crate::util::format` module to `crate::format`.
+- [add][patch] Add Wireshark dissector for TCP and UDP transports for easier debugging.
 
 # Version 0.5.0-alpha7 - 2022-01-10
 - [add][minor] Add a specific `Format` trait for generated interaces to avoid writing overly long trait bounds.
